--- a/UI/reset_password.html
+++ b/UI/reset_password.html
@@ -16,27 +16,28 @@
 </head>
 
 <body>
-<nav class="navbar">
+
+<nav class="navbar" role="navigation">
     <span class="navbar-toggle" id="js-navbar-toggle">
         <i class="fas fa-bars primary-color"></i>
     </span>
 
-    <a href="#" class="logo"><img src="img/quick_cash_logo.png" alt="Quick Cash logo"></a>
+    <a href="index.html" class="logo"><img src="img/quick_cash_logo.png" alt="Quick Cash logo"></a>
     <ul class="main-nav" id="js-menu">
         <li>
-            <a href="#" class="nav-links">Quick Credit?</a>
+            <a href="index.html#quick-credit-section" class="nav-links">Quick Credit?</a>
         </li>
         <li>
-            <a href="#" class="nav-links">Why choose us?</a>
+            <a href="index.html#features-section" class="nav-links">Why choose us?</a>
         </li>
         <li>
-            <a href="#" class="nav-links"><button class="button primary-outline-button nav-button">Sign in</button></a>
+            <a href="login.html" class="nav-links"><button class="button primary-outline-button nav-button">Sign in</button></a>
         </li>
         <li>
-            <a href="#" class="nav-links"><button class="button primary-button nav-button">Sign up</button></a>
+            <a href="signup.html" class="nav-links"><button class="button primary-button nav-button">Sign up</button></a>
         </li>
         <li>
-            <a href="#" class="nav-links" title="Need help?"><i class="far fa-question-circle rotate"></i></a>
+            <a href="help.html" target="_blank" class="nav-links" title="Need help?"><i class="far fa-question-circle rotate"></i></a>
         </li>
     </ul>
 </nav>
@@ -46,7 +47,7 @@
         <div class="form-card margin-t-4">
             <h3 class="align-center">Reset Password</h3>
             <div class="img-container">
-                <a href="#"><img class="rotate" src="img/quick_cash_logo_only.png" alt="mini-logo"></a>
+                <a href="index.html"><img class="rotate" src="img/quick_cash_logo_only.png" alt="mini-logo"></a>
             </div>
 
             <div class="padding-lr-1">
@@ -62,7 +63,7 @@
             </div>
 
             <div class="align-right padding-lr-1 margin-t-2">
-                <a href="#" class="small-text">Login instead?</a>
+                <a href="login.html" class="small-text">Login instead?</a>
             </div>
         </div>
     </div>
@@ -72,18 +73,18 @@
     <div class="container">
         <div class="display-flex-row">
             <div id="footer-logo-div">
-                <a href="#"><img class="rotate" src="img/quick_cash_outline_logo.png" alt="quick cash outline logo"></a>
+                <a href="index.html"><img class="rotate" src="img/quick_cash_outline_logo.png" alt="quick cash outline logo"></a>
             </div>
 
             <ul class="list-unstyled" id="footer-menu">
                 <li>
-                    <a href="#">Help</a>
+                    <a href="help.html" target="_blank">Help</a>
                 </li>
                 <li>
                     <a href="#">Documentation</a>
                 </li>
                 <li>
-                    <a href="#">Privacy & Terms</a>
+                    <a href="privacy_terms.html" target="_blank">Privacy & Terms</a>
                 </li>
             </ul>
         </div>
@@ -94,7 +95,7 @@
                 <li class="text-muted">support@quickcredit.com</li>
             </ul>
 
-            <p class="margin-t-1 text-muted">&copy; <a href="#" class="color-black primary-hover-color">Quick Credit</a>
+            <p class="margin-t-1 text-muted">&copy; <a href="index.html" class="color-black primary-hover-color">Quick Credit</a>
                 <script>document.write(new Date().getFullYear())</script>. All Rights Reserved
             </p>
         </div>
