bug(unresponsive-navbar-menu): fix unresponsive navbar menu
[Finishes #165662650]

--- a/UI/admin_post_loan_repayment.html
+++ b/UI/admin_post_loan_repayment.html
@@ -81,7 +81,7 @@
     <div class="container">
         <div><a href="admin_dashboard.html" class="no-underline">Dashboard</a> > <a href="admin_current_loans.html" class="no-underline">Current</a> > Repayment</div>
 
-        <div class="display-flex-row margin-t-2">
+        <div class="margin-t-2">
             <div class="align-center">
                 <div>
                     <i class="fa-2x fas fa-credit-card primary-color rotate"></i>
