chore(ui-header-refactor): improve contrast and legibility
[Finishes #166001926]

--- a/UI/index.html
+++ b/UI/index.html
@@ -50,8 +50,8 @@
 <header id="header-bg">
     <div class="container">
         <div id="inner-header-contents">
-            <h1 class="margin-b-1">Your <span class="box-shadow" id="quick-text">easy</span> access to soft loans</h1>
-            <p class="margin-b-1">We're helping solve problems of financial inclusion as a way to alleviate poverty and empower low income earners</p>
+            <h1 class="margin-b-1" id="header-text">Your <span class="box-shadow" id="quick-text">easy</span> access to soft loans</h1>
+            <p class="margin-b-1"><strong>We're helping solve problems of financial inclusion as a way to alleviate poverty and empower low income earners</strong></p>
             <p class="margin-t-2"><a href="signup.html"><button class="button primary-button">Let's get you started</button></a></p>
         </div>
     </div>
@@ -72,11 +72,11 @@
 
 <section id="features-section">
     <div class="container">
-        <div class="display-flex-row">
-            <div class="z-0">
-                <img class="feature-image zoom" src="img/features/undraw_active_support_6rwo.svg" alt="active-support-feature">
-            </div>
+        <div class="display-flex-row flex-space">
             <div class="align-left z-1">
+                <div class="z-0">
+                    <img class="feature-image zoom align-center" src="img/features/undraw_active_support_6rwo.svg" alt="active-support-feature">
+                </div>
                 <h2 class="margin-b-1">Quality Support</h2>
                 <div class="row">
                     <p>We've got you anytime!</p>
@@ -88,40 +88,27 @@
                     </p>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
 
-<section>
-    <div class="container">
-        <div class="display-flex-row">
-            <div class="align-right z-1">
+            <div class="align-left z-1">
+                <div class="z-0">
+                    <img class="feature-image zoom" src="img/features/undraw_Security_on_s9ym.svg" alt="security-feature">
+                </div>
                 <h2 class="margin-b-1">Safe & Secure</h2>
                 <div>
                     <p>You're in safe hands</p>
                     <p class="text-muted small-text">
-                        Our platform is stable and secured <i class="fas fa-check-circle zoom primary-color"></i>
+                        <i class="fas fa-check-circle zoom primary-color"></i> Our platform is stable and secured
                     </p>
                     <p class="text-muted small-text">
-                        We take your privacy and information seriously <i class="fas fa-check-circle zoom primary-color"></i>
+                        <i class="fas fa-check-circle zoom primary-color"></i> We take your privacy and information seriously
                     </p>
                 </div>
             </div>
 
-            <div class="z-0">
-                <img class="feature-image zoom" src="img/features/undraw_Security_on_s9ym.svg" alt="security-feature">
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container">
-        <div class="display-flex-row">
-            <div class="z-0">
-                <img class="feature-image zoom" src="img/features/undraw_mobile_app_0irr.svg" alt="mobile-friendly-feature">
-            </div>
-            <div class="align-left z-1">
+            <div class="align-left z-1 mar">
+                <div class="z-0">
+                    <img class="feature-image zoom" src="img/features/undraw_mobile_app_0irr.svg" alt="mobile-friendly-feature">
+                </div>
                 <h2 class="margin-b-1">Mobile Friendly</h2>
                 <div>
                     <p>Tailored to deliver quality user experience</p>
@@ -136,6 +123,73 @@
         </div>
     </div>
 </section>
+
+<!--<section id="features-section">-->
+    <!--<div class="container">-->
+        <!--<div class="display-flex-row">-->
+            <!--<div class="z-0">-->
+                <!--<img class="feature-image zoom" src="img/features/undraw_active_support_6rwo.svg" alt="active-support-feature">-->
+            <!--</div>-->
+            <!--<div class="align-left z-1">-->
+                <!--<h2 class="margin-b-1">Quality Support</h2>-->
+                <!--<div class="row">-->
+                    <!--<p>We've got you anytime!</p>-->
+                    <!--<p class="text-muted small-text"><i class="fas fa-check-circle zoom primary-color"></i>-->
+                        <!--Top quality support all day long-->
+                    <!--</p>-->
+                    <!--<p class="text-muted small-text"><i class="fas fa-check-circle zoom primary-color"></i>-->
+                        <!--Passionate support team to help you crack the tough nuts-->
+                    <!--</p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
+
+<!--<section>-->
+    <!--<div class="container">-->
+        <!--<div class="display-flex-row">-->
+            <!--<div class="align-right z-1">-->
+                <!--<h2 class="margin-b-1">Safe & Secure</h2>-->
+                <!--<div>-->
+                    <!--<p>You're in safe hands</p>-->
+                    <!--<p class="text-muted small-text">-->
+                        <!--Our platform is stable and secured <i class="fas fa-check-circle zoom primary-color"></i>-->
+                    <!--</p>-->
+                    <!--<p class="text-muted small-text">-->
+                        <!--We take your privacy and information seriously <i class="fas fa-check-circle zoom primary-color"></i>-->
+                    <!--</p>-->
+                <!--</div>-->
+            <!--</div>-->
+
+            <!--<div class="z-0">-->
+                <!--<img class="feature-image zoom" src="img/features/undraw_Security_on_s9ym.svg" alt="security-feature">-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
+
+<!--<section>-->
+    <!--<div class="container">-->
+        <!--<div class="display-flex-row">-->
+            <!--<div class="z-0">-->
+                <!--<img class="feature-image zoom" src="img/features/undraw_mobile_app_0irr.svg" alt="mobile-friendly-feature">-->
+            <!--</div>-->
+            <!--<div class="align-left z-1">-->
+                <!--<h2 class="margin-b-1">Mobile Friendly</h2>-->
+                <!--<div>-->
+                    <!--<p>Tailored to deliver quality user experience</p>-->
+                    <!--<p class="text-muted small-text"><i class="fas fa-check-circle zoom primary-color"></i>-->
+                        <!--No sweat about what device you're on-->
+                    <!--</p>-->
+                    <!--<p class="text-muted small-text"><i class="fas fa-check-circle zoom primary-color"></i>-->
+                        <!--The best user experience is guaranteed on any device-->
+                    <!--</p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
 
 <section id="steps-section-bg">
     <div class="container align-center">
@@ -154,7 +208,6 @@
                 <div class="md-step active">
                     <div class="md-step-circle zoom"><span>2</span></div>
                     <div class="md-step-title"><i class="fas fa-user-check primary-color"></i> Verify email</div>
-                    <div class="md-step-optional">just a button click</div>
                     <div class="md-step-bar-left"></div>
                     <div class="md-step-bar-right"></div>
                 </div>
