--- a/UI/signup.html
+++ b/UI/signup.html
@@ -60,11 +60,8 @@
                     <label for="last-name"><b>Last Name</b></label>
                     <input type="text" placeholder="Enter Last Name" id="last-name" name="last-name" required>
 
-                    <label for="home_address"><b>Home Address</b></label>
-                    <input type="text" placeholder="Enter Address" id="home_address" name="home_address" required>
-
-                    <label for="work_address"><b>Work Address</b></label>
-                    <input type="text" placeholder="Enter Address" id="work_address" name="work_address" required>
+                    <label for="address"><b>Address</b></label>
+                    <input type="text" placeholder="Enter Address" id="address" name="address" required>
 
                     <label for="password"><b>Password</b></label>
                     <input type="password" placeholder="Enter password" id="password" name="password" required>
