bug(feature-image-alignment): align images center
- align feature  images to the center of their respective containers

[Finishes #166042021]

--- a/UI/index.html
+++ b/UI/index.html
@@ -74,7 +74,7 @@
     <div class="container">
         <div class="display-flex-row flex-space">
             <div class="align-left z-1">
-                <div class="z-0">
+                <div class="z-0 feature-image-div">
                     <img class="feature-image zoom align-center" src="img/features/undraw_active_support_6rwo.svg" alt="active-support-feature">
                 </div>
                 <h2 class="margin-b-1">Quality Support</h2>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="align-left z-1">
-                <div class="z-0">
+                <div class="z-0 feature-image-div">
                     <img class="feature-image zoom" src="img/features/undraw_Security_on_s9ym.svg" alt="security-feature">
                 </div>
                 <h2 class="margin-b-1">Safe & Secure</h2>
@@ -106,7 +106,7 @@
             </div>
 
             <div class="align-left z-1 mar">
-                <div class="z-0">
+                <div class="z-0 feature-image-div">
                     <img class="feature-image zoom" src="img/features/undraw_mobile_app_0irr.svg" alt="mobile-friendly-feature">
                 </div>
                 <h2 class="margin-b-1">Mobile Friendly</h2>
